Add feature: display book objects in HTML

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <h1>Library</h1>
             </header>
 
-            <main class="main">
+            <main class="book-shelf">
                 <div class="add-book">
                     <button type="button" id="btn-add-book">+ Add book</button>
                 </div>
