--- a/index.html
+++ b/index.html
@@ -13,23 +13,42 @@
             <header class="header">
                 <h1>Library</h1>
             </header>
-
-            <main class="book-shelf">
+            
+            <main class="main">
                 <div class="add-book">
-                    <button type="button" id="btn-add-book">+ Add book</button>
+                    <button id="btn-show-modal">+ Add book</button>
                 </div>
 
-                <div class="book-card">
-                    <p>test</p>
-                    <p>jrr tolkien</p>
-                </div>
-                <div class="book-card">
-                    <p>test</p>
-                    <p>jrr tolkien</p>
-                </div>
-                <div class="book-card">
-                    <p>test</p>
-                    <p>jrr tolkien</p>
+                <dialog class="modal-container">
+                    <form action="" class="modal-form">
+                        <label for="title">Title:</label>
+                        <input type="text" name="title" id="title">
+                        <label for="author">Author:</label>
+                        <input type="text" name="author" id="author">
+                        <label for="pages">Number of Pages:</label>
+                        <input type="number" name="pages" id="pages">
+                        <label for="isRead">Have you read this book?</label>
+                        <input type="checkbox" name="isRead" id="isRead">
+                        <div>
+                            <button type="submit" id="btn-submit">Add book</button>
+                            <button id="btn-cancel">Cancel</button>
+                        </div>
+                    </form>
+                </dialog>
+
+                <div class="book-shelf">
+                    <div class="book-card">
+                        <p>test</p>
+                        <p>jrr tolkien</p>
+                    </div>
+                    <div class="book-card">
+                        <p>test</p>
+                        <p>jrr tolkien</p>
+                    </div>
+                    <div class="book-card">
+                        <p>test</p>
+                        <p>jrr tolkien</p>
+                    </div>
                 </div>
             </main>
 
