--- a/index.html
+++ b/index.html
@@ -10,51 +10,41 @@
 
     <body>
         <div class="container">
+
             <header class="header">
                 <h1>Library</h1>
             </header>
-            
+
             <main class="main">
+
                 <div class="add-book">
-                    <button id="btn-show-modal">+ Add book</button>
+                    <button type="button" id="btn-show-modal">+ Add book</button>
+                    <dialog class="modal-container">
+                        <form action="" class="modal-form" method="dialog">
+                            <label for="title">Title:</label>
+                            <input type="text" name="title" id="title" required autocomplete="off">
+                            <label for="author">Author:</label>
+                            <input type="text" name="author" id="author" required autocomplete="off">
+                            <label for="pages">Number of Pages:</label>
+                            <input type="number" name="pages" id="pages" required>
+                            <label for="isRead">Have you read this book?</label>
+                            <input type="checkbox" name="isRead" id="isRead">
+                            <div>
+                                <button type="submit" id="btn-submit">Add book</button>
+                                <button type="button" id="btn-cancel">Cancel</button>
+                            </div>
+                        </form>
+                    </dialog>
                 </div>
 
-                <dialog class="modal-container">
-                    <form action="" class="modal-form">
-                        <label for="title">Title:</label>
-                        <input type="text" name="title" id="title">
-                        <label for="author">Author:</label>
-                        <input type="text" name="author" id="author">
-                        <label for="pages">Number of Pages:</label>
-                        <input type="number" name="pages" id="pages">
-                        <label for="isRead">Have you read this book?</label>
-                        <input type="checkbox" name="isRead" id="isRead">
-                        <div>
-                            <button type="submit" id="btn-submit">Add book</button>
-                            <button id="btn-cancel">Cancel</button>
-                        </div>
-                    </form>
-                </dialog>
+                <div class="book-shelf"></div>
 
-                <div class="book-shelf">
-                    <div class="book-card">
-                        <p>test</p>
-                        <p>jrr tolkien</p>
-                    </div>
-                    <div class="book-card">
-                        <p>test</p>
-                        <p>jrr tolkien</p>
-                    </div>
-                    <div class="book-card">
-                        <p>test</p>
-                        <p>jrr tolkien</p>
-                    </div>
-                </div>
             </main>
 
             <footer class="footer">
                 <h3>Copyright &copy; Paolo Soriano <span id="current-year"></span></h3>
             </footer>
+
         </div>
 
         <script src="script.js"></script>
